--- a/src/app/components/mokuhyo1/mokuhyo1.component.scss
+++ b/src/app/components/mokuhyo1/mokuhyo1.component.scss
@@ -1,162 +1,289 @@
-.menu_up ul li{
-  display: inline;
-  list-style-type: none;
-  padding: 10px 10px;
-}
-
-
-.menu_up{
-  /*定錨*/
+/* 更新 .menudiv，確保高度正確 */
+.menudiv {
   z-index: 1;
   position: fixed;
-  top: 0%;
+  top: 6%;  /* 從工具欄下方開始 */
   left: 0%;
-
-  width: 100%;
-  height: 6%;
-  background-color: #000000;
-  overflow:hidden;
-
-  .menu{
-    padding: 0%;
-    position: fixed;
-    left: 0px;
-    top: 10%;
-  }
-
-  .home{
-    padding: 0%;
-    position:absolute;
-    left: 3%;
-    top: 10%;
-  }
-
-  .group{
-    padding: 0%;
-    position: absolute;
-    right: 10px;
-    top: 10px;
-  }
-
-  .group:hover::before{
-    z-index: 5;
-    position:fixed;
-    top: 6%;
-    right: 10px;
-    height: 4%;
-    width: 100px;
-
-    content:'登入與註冊';
-    color: #fff;
-    font-size: .1 em;
-    background: #000000;
-    padding: 8px;
-    border-radius: 10px;
-  }
-  .example-spacer {
-    flex: 1 1 auto;
-  }
-}
-
-
-
-.menudiv{
-  /*定錨*/
-  z-index: 1;
-  position: fixed;
-  top: 6%;
-  left: 0%;
-
   display: flex;
   flex-direction: column;
-  unicode-bidi: isolate;
   background-color: #ffcf97;
   border: 1px solid;
   width: 100%;
-  height: 100%;
-
-  nav a.newkami1:hover::before{
-    z-index: 5;
-
-    position:fixed;
-    left: 80px;
-    height: 4%;
-    width: 80px;
-
-    content:'新增問卷';
-
-    color: #fff;
-    font-size: .1 em;
-    background: #000000;
-    padding: 8px;
-    border-radius: 10px;
-
-  }
-  nav a.newkami2:hover::before{
-    z-index: 5;
-
-    position:fixed;
-    left: 80px;
-    height: 4%;
-    width: 80px;
-
-
-    content:'瀏覽問卷';
-
-    color: #fff;
-    font-size: .1 em;
-    background: #000000;
-    padding: 8px;
-    border-radius: 10px;
-  }
-
-  .manaka{
-    z-index: 0;
-    // border-style: solid;
-    position: absolute;
-    top: 2%;
-    left: 3.8%;
-
-    width: 94%;
-    height: 90vh;
-  }
+  height: calc(100vh - 6%);  /* 計算剩餘高度，避免內容被遮擋 */
 }
 
-.example-sidenav-content {
-  display: flex;
-  height: 10%;
-  align-items: center;
-  justify-content: center;
+/* 更新 .manaka，確保內容顯示正確 */
+.manaka {
+  z-index: 0;
+  position: absolute;
+  top: 0;  /* 從父容器的頂部開始 */
+  left: 3.8%;
+  width: 94%;
+  height: calc(100vh - 6%); /* 保證其高度能夠適應剩餘的視窗高度 */
+  overflow-y: auto;  /* 允許頁面內容垂直滾動 */
+  padding: 20px;
+  box-sizing: border-box;
 }
 
+/* 增加滾動條的樣式（如果有需要） */
+.manaka::-webkit-scrollbar {
+  width: 8px;
+}
+
+.manaka::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 4px;
+}
+
+.manaka::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
+/* 調整側邊欄的樣式 */
 .example-sidenav {
   padding: 10px;
   width: 80px;
   background-color: #000000;
 }
 
+/* 增加整體彈性布局的處理，確保內容區域適配 */
+.example-sidenav-content {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
+/* 針對其他必要的微調樣式 */
+.menu_up {
+  z-index: 1;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 6%;  /* 工具欄的高度 */
+  background-color: #000000;
+  overflow: hidden;
+}
 
+/* 菜單按鈕樣式 */
+.menu {
+  padding: 0;
+  position: fixed;
+  left: 0px;
+  top: 10%;
+}
 
+.home {
+  padding: 0;
+  position: absolute;
+  left: 3%;
+  top: 10%;
+}
 
-.mat-icon{
+.group {
+  padding: 0;
+  position: absolute;
+  right: 10px;
+  top: 10px;
+}
+
+/* 調整樣式，保證按鈕在 hover 時顯示提示 */
+.group:hover::before {
+  z-index: 5;
+  position: fixed;
+  top: 6%;
+  right: 10px;
+  height: 4%;
+  width: 100px;
+  content: '登入與註冊';
+  color: #fff;
+  font-size: .1em;
+  background: #000000;
+  padding: 8px;
+  border-radius: 10px;
+}
+
+/* 確保側邊導航區域的項目間距和 hover 效果 */
+nav a.newkami1:hover::before,
+nav a.newkami2:hover::before {
+  z-index: 5;
+  position: fixed;
+  left: 80px;
+  height: 4%;
+  width: 80px;
+  color: #fff;
+  font-size: .1em;
+  background: #000000;
+  padding: 8px;
+  border-radius: 10px;
+}
+
+/* .mat-icon 樣式保持不變 */
+.mat-icon {
   font-size: 40px;
   width: 50px;
   height: 50px;
   color: rgb(255, 255, 255);
 }
 
-nav a,nav label{
+nav a, nav label {
   display: block;
   padding: 10px;
-
 }
+//===========================================
+// .menu_up ul li{
+//   display: inline;
+//   list-style-type: none;
+//   padding: 10px 10px;
+// }
+
+
+// .menu_up{
+//   /*定錨*/
+//   z-index: 1;
+//   position: fixed;
+//   top: 0%;
+//   left: 0%;
+
+//   width: 100%;
+//   height: 6%;
+//   background-color: #000000;
+//   overflow:hidden;
+
+//   .menu{
+//     padding: 0%;
+//     position: fixed;
+//     left: 0px;
+//     top: 10%;
+//   }
+
+//   .home{
+//     padding: 0%;
+//     position:absolute;
+//     left: 3%;
+//     top: 10%;
+//   }
+
+//   .group{
+//     padding: 0%;
+//     position: absolute;
+//     right: 10px;
+//     top: 10px;
+//   }
+
+//   .group:hover::before{
+//     z-index: 5;
+//     position:fixed;
+//     top: 6%;
+//     right: 10px;
+//     height: 4%;
+//     width: 100px;
+
+//     content:'登入與註冊';
+//     color: #fff;
+//     font-size: .1 em;
+//     background: #000000;
+//     padding: 8px;
+//     border-radius: 10px;
+//   }
+//   .example-spacer {
+//     flex: 1 1 auto;
+//   }
+// }
+
+
+
+// .menudiv{
+//   /*定錨*/
+//   z-index: 1;
+//   position: fixed;
+//   top: 6%;
+//   left: 0%;
+
+//   display: flex;
+//   flex-direction: column;
+//   unicode-bidi: isolate;
+//   background-color: #ffcf97;
+//   border: 1px solid;
+//   width: 100%;
+//   height: 100%;
+
+//   nav a.newkami1:hover::before{
+//     z-index: 5;
+
+//     position:fixed;
+//     left: 80px;
+//     height: 4%;
+//     width: 80px;
+
+//     content:'新增問卷';
+
+//     color: #fff;
+//     font-size: .1 em;
+//     background: #000000;
+//     padding: 8px;
+//     border-radius: 10px;
+
+//   }
+//   nav a.newkami2:hover::before{
+//     z-index: 5;
+
+//     position:fixed;
+//     left: 80px;
+//     height: 4%;
+//     width: 80px;
+
+
+//     content:'瀏覽問卷';
+
+//     color: #fff;
+//     font-size: .1 em;
+//     background: #000000;
+//     padding: 8px;
+//     border-radius: 10px;
+//   }
+
+//   .manaka{
+//     z-index: 0;
+//     // border-style: solid;
+//     position: absolute;
+//     top: 2%;
+//     left: 3.8%;
+
+//     width: 94%;
+//     height: 90vh;
+//   }
+// }
+
+// .example-sidenav-content {
+//   display: flex;
+//   height: 10%;
+//   align-items: center;
+//   justify-content: center;
+// }
+
+// .example-sidenav {
+//   padding: 10px;
+//   width: 80px;
+//   background-color: #000000;
+// }
+
+
+
+
+
+// .mat-icon{
+//   font-size: 40px;
+//   width: 50px;
+//   height: 50px;
+//   color: rgb(255, 255, 255);
+// }
+
+// nav a,nav label{
+//   display: block;
+//   padding: 10px;
+
+// }
 
 // a{text-decoration:none}
 // a:hover{text-decoration:none}
-
-
-
-
-
-
