--- a/src/app/components/mokuhyo3/mokuhyo3.component.scss
+++ b/src/app/components/mokuhyo3/mokuhyo3.component.scss
@@ -1,12 +1,20 @@
 .createAQuestionnaire{
-  max-width: fit-content;
-  margin-left: auto;
-  margin-right: auto;
-  width: 100%;
-  border-style: solid;
+  width: 80%;
+  max-width: 900px;
+  margin: 30px auto;
+  padding: 20px;
+  background-color: #fff;
+  border-radius: 8px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+
 }
 
 .buttonSan{
+  position: fixed;
+  bottom: 3%;
+  right: 2%;
+  size: 10px;
+
   max-width: fit-content;
   margin-left: auto;
 }
