--- a/src/app/siyousya/siyousya2/siyousya2.component.html
+++ b/src/app/siyousya/siyousya2/siyousya2.component.html
@@ -3,13 +3,13 @@
   <p>{{quizData.quizDes}}</p>
   <form [formGroup]="form" class="container">
     <div id="auth-form" class="form active">
-      <label>名字:</label>
+      <label>名字:</label><span style="color: red;">*</span>
       <input class="inputfrom" formControlName="name" placeholder="名字" [(ngModel)]="userName">
       <br>
       <label>手機:</label>
       <input class="inputfrom" formControlName="mobilePhoneNumber" placeholder="手機" [(ngModel)]="userPhone">
       <br>
-      <label>信箱:</label>
+      <label>信箱:</label><span style="color: red;">*</span>
       <input class="inputfrom" formControlName="email" placeholder="信箱" [(ngModel)]="userEmail">
       <br>
       <label>年齡:</label>
