--- a/src/app/siyousya/siyousya2/siyousya2.component.scss
+++ b/src/app/siyousya/siyousya2/siyousya2.component.scss
@@ -1,62 +1,147 @@
+/* 問卷容器樣式 */
 .siyousya {
-  border-style: solid;
-
-  height: 100%;
   width: 80%;
+  max-width: 900px;
+  margin: 30px auto;
+  padding: 20px;
+  background-color: #fff;
+  border-radius: 8px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+}
 
-  // position: absolute;
-  top: 0%;
-  left: 10%;
+.siyousya h1 {
+  font-size: 24px;
+  text-align: center;
+  margin-bottom: 20px;
+  color: #333;
+}
 
-  // overflow: auto;
+.siyousya p {
+  text-align: center;
+  color: #777;
+  margin-bottom: 30px;
+}
 
-  .container {
-    text-align: center;
-    vertical-align: middle;
-  }
+/* 表單樣式 */
+.siyousya form {
+  display: flex;
+  flex-direction: column;
+}
 
-  h1 {
-    // border-style: solid;
-    width: 100%;
-    height: 5%;
-    font-size: 45px;
-    // transform: translate(45%);
-    text-align: center;
-    vertical-align: middle;
-  }
+.siyousya label {
+  font-weight: bold;
+  margin: 10px 0 5px;
+  color: #555;
+}
 
-  p {
-    font-size: 27px;
-    transform: translate(45%);
-  }
+.siyousya .inputfrom {
+  padding: 10px;
+  font-size: 16px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  margin-bottom: 15px;
+  width: 100%;
+  box-sizing: border-box;
+}
 
-  form div label {
-    font-size: 23px;
-  }
+.siyousya .inputfrom:focus {
+  outline: none;
+  border-color: #0066cc;
+  box-shadow: 0 0 5px rgba(0, 102, 204, 0.3);
+}
 
-  .inputfrom {
-    margin-left: 20px;
-    width: 40%;
+/* 問卷選項文字大小調整 */
+.siyousya .forsitumon ol {
+  padding-left: 20px;
+}
+
+.siyousya .forsitumon h5 {
+  font-size: 20px;  /* 增加選項標題的文字大小 */
+  margin-bottom: 10px;
+  color: #333;
+}
+
+.siyousya .forsitumon .MST {
+  margin-right: 10px;
+}
+
+/* 增加選項文字大小 */
+.siyousya .forsitumon div {
+  font-size: 18px;  /* 增加每個選項文字的大小 */
+  margin-bottom: 10px;
+  color: #555;
+}
+
+/* 微調勾選框和文字之間的間距 */
+.siyousya .forsitumon div input {
+  margin-right: 8px;  /* 調整勾選框與文字之間的間距 */
+}
+
+
+.siyousya textarea {
+  width: 100%;
+  padding: 10px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  resize: vertical;
+}
+
+.siyousya textarea:focus {
+  outline: none;
+  border-color: #0066cc;
+  box-shadow: 0 0 5px rgba(0, 102, 204, 0.3);
+}
+
+/* 強調必填欄位 */
+.siyousya span {
+  color: red;
+}
+
+/* 按鈕樣式 */
+.siyousya .botam {
+  text-align: center;
+  margin-top: 30px;
+}
+
+.siyousya button {
+  background-color: #0066cc;
+  color: #fff;
+  border: none;
+  padding: 10px 20px;
+  font-size: 16px;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  margin: 0 10px;
+}
+
+.siyousya button:hover {
+  background-color: #004c99;
+}
+
+.siyousya button:focus {
+  outline: none;
+  box-shadow: 0 0 3px rgba(0, 102, 204, 0.6);
+}
+
+.siyousya button:disabled {
+  background-color: #cccccc;
+  cursor: not-allowed;
+}
+
+.botam {
+  position: fixed;
+  bottom: 3%;
+  right: 2%;
+
+  button {
+    width: 120px;
     height: 40px;
   }
-
-  .MST {
-    zoom: 150%;
-  }
+}
 
 
-  .forsitumon {
-    transform: translate(25%);
-
-    h5 {
-      font-size: 40px;
-    }
-
-    font-size:30px;
-  }
-
-
-  // margin: 0;
+// margin: 0;
   // // min-height: 100vh;
   // background-color: #e493d0;
   // background-image:
@@ -79,20 +164,6 @@
   //   50vmax 50vmax;
   // background-repeat: no-repeat;
   // animation: 5s movement linear infinite;
-
-}
-
-.botam {
-  position: absolute;
-  bottom: 10%;
-  right: 0%;
-  size: 10px;
-
-  button {
-    width: 120px;
-    height: 40px;
-  }
-}
 
 // @keyframes movement {
 
